--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "helmet": "^4.6.0",
     "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {
     "chai": "^4.3.4",
